Wed Mar 14 10:11:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (lnk_suffixes): Remove.
	(class suffix_scan): Add `lnk_state' flag.
	(suffix_scan::lnk_match): Return state of `lnk_state' now.
	(suffix_scan::has): Changed behaviour if file has `.lnk' suffix.
	(suffix_scan::next): Set `lnk_state' where appropriate.
	(symlink_info::check): Fix a wrong `break'.
	* syscalls.cc (chown_worker): Change debug statement to reflect
	lchown fix.
	(lchown): Call chown_worker with `PC_SYM_NOFOLLOW' instead of
	`PC_SYM_IGNORE'.

Tue Mar 13 13:52:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_disk_file::fstat): Add correct modes to
	symlinks when stat'ing on FAT or FAT32 file systems.

2001-03-12  Egor Duda  <deo@logos-m.ru>

	* fhandler.h (fhandler_termios::fixup_after_exec): New function.
	* fhandler_termios.cc (fhandler_termios::fixup_after_fork): New
	function. Fixup output handle.
	* fhandler_tty.cc (fhandler_tty_common::fixup_after_fork): Output
	handle is now fixed up in fhandler_termios::fixup_after_fork().

2001-03-12  Egor Duda  <deo@logos-m.ru>

	* fhandler.h (fhandler_termios::fhandler_termios): Enable fixup
	after fork.
	* fhandler_console.cc (fhandler_console::fhandler_console): Fixup
	after fork is now enabled in the base class constructor.

Mon Mar 12 11:19:41 2001  Christopher Faylor <cgf@cygnus.com>

	* mkvers.sh: Include config.h so that DEBUGGING is correctly defined.

Mon Mar 12 09:47:55 2001  Christopher Faylor <cgf@cygnus.com>

	* spawn.cc (spawn_guts): Don't set EXIT_REPARENTING if parent process
	is not a cygwin process (suggested by Jason Gouger
	<cygwin@jason-gouger.com>).

Sun Mar 11 16:00:58 2001  Christopher Faylor <cgf@cygnus.com>

	* child_info.h: Bump magic number for fork/exec/spawn.

Sat Mar 10 20:54:47 2001  Christopher Faylor <cgf@cygnus.com>

	* autoload.cc (noload): Use proper method for multiline strings or
	newer gcc's complain.
	* exceptions.cc (unused_sig_wrapper): Ditto.